source/stylesheets/partials/_gallerymodal.scss
dialog.modal.gallery {
  article {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
    header {
      flex: 1.5;
      display: flex;
      align-content: flex-end;
      flex-wrap: wrap;
      margin-bottom: 1em;
      top: 0px;
      position: relative;
      transition: top 1s ease;
      h1, p {
        width: 100%;
        margin: 0px;
        display: block;
        text-align: center;
      }
    }
    header.expanded {
      top: 7em;
      @include tablet-layout {
        top: 9em;
      }
      @include medium-layout {
        top: 11em;
      }
      @include large-layout {
        top: 13em;
      }
    }
    ul {
      flex: 4;
      // // grab
      // cursor: grab;
      // cursor: -webkit-grab;
      // &:active {
      //   cursor: grabbing;
      //   cursor: -webkit-grabbing;
      // }
      white-space: nowrap;
      overflow-x: scroll;
      overflow-y: hidden;
      -webkit-padding-start: 0px;
      list-style: none;
      // Add momentum scrolling on mobile
      -webkit-overflow-scrolling: touch;
      // Hide scrollbar
      &::-webkit-scrollbar {
        display: none;
      }
      li {
        vertical-align: middle;
        margin-top: 1em;
        margin-bottom: 1em;
        margin-right: 10em;
        display: inline-block;
        width: 100%;
      }
      li, li p {
        text-align: center;
      }
      li p, li img {
        margin: 0px;
      }
      li img {
        width: 100%;
        box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75);
        margin-bottom: 1em;
        @include medium-layout {
          border: 0.5em solid #fff;
          border-radius: 0.25em;
        }
        &.portrait {
          width: auto;
          max-height: 45%;
        }
      }
      li p {
        font-size: 0.9em;
        font-style: oblique;
        width: 80%;
        white-space: normal;
        margin: 0 auto;
      }
      li:last-child {
        margin-right: 0px;
      }
      // increase to 25% left when tablet
      @include tablet-layout {
        li {
          width: 50%;
        }
        li:first-child {
          margin-left: 25%;
        }
        li:last-child {
          margin-right: 25%;
        }
      }
    }
    li.viewmore a {
      color: $medium-blue-color;
      text-align: center;
      text-decoration: none;
      font-size: 1.3em;
      font-weight: $medium;
      border: 2px solid $medium-blue-color;
      border-radius: 0.25em;
      padding: 0.75ex 1.5ex;
      transition: padding 0.25s ease;
      &:hover {
        text-decoration: underline;
        padding: 1.25ex 2ex;
      }
    }
    footer {
      width: 100%;
      flex: 0.8;
      text-align: center;
      progress {
        width: 40%;
        margin-top: 1em;

        // restyle the progress bar
        -webkit-appearance: none;
        appearance: none;

        &::-webkit-progress-bar, &::-webkit-progress-value {
          height: 2px;
          border-radius: 2px;
        }
         &::-webkit-progress-bar {
          background-color: $light-gray-color;
        }
        &::-webkit-progress-value {
          background-color: $medium-gray-color;
        }
      }
    }
  }
}

